<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
       <variable
            name="viewModel"
            type="com.mostafan3ma.android.menupro10.presentation.fragments.viewModels.CreateAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"
        tools:context=".presentation.fragments.startingFragments.CreateAccountFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/txt_create_account1"
                    style="@style/txt_styles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/txt_create_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_create_account2"
                    style="@style/txt_styles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/txt_create_acount2"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_create_account1" />


                <ImageView
                    android:id="@+id/img_add_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{()-> viewModel.addLogoClicked()}"
                    android:src="@drawable/add_new_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_create_account2" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_logo">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/shop_name_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_shop_name"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="#FFA800"
                        app:hintTextColor="#FFA800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/shop_name_edit"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:text="@={viewModel.shopName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/type_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="#FFA800"
                        app:hintTextColor="#FFA800"
                        android:hint="@string/txt_type">

                        <AutoCompleteTextView
                            android:id="@+id/type_auto_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.type}"
                            android:inputType="none"
                            android:imeOptions="actionNext"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_type_field"
                        android:visibility="gone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_your_shop_type"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="#FFA800"
                        app:hintTextColor="#FFA800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_type_edit"
                            android:layout_width="300dp"
                            android:text="@={viewModel.otherType}"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/country_frame_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4.5dp"
                            android:background="@drawable/country_picker_rounded_corner_black"
                            android:padding="8dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.hbb20.CountryCodePicker
                                android:id="@+id/countryCodePicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:ccp_showArrow="false"
                                app:ccp_showFlag="true"
                                app:ccp_showNameCode="false"
                                android:visibility="visible"
                                app:ccp_defaultPhoneCode="964"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone_edit"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@null"
                                android:inputType="number"
                                android:maxLength="10"
                                android:imeOptions="actionDone"
                                android:text="@={viewModel.phoneNumber}"
                                android:hint="@string/txt_phone_number"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/img_clear_phone"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/img_clear_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:visibility="gone"
                                android:layout_marginBottom="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_baseline_cancel_24" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/tv_country_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="8dp"
                            android:background="@android:color/white"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:visibility="invisible"
                            android:textColor="#FFA800"
                            android:backgroundTint="@color/default_background"
                            android:text="@string/txt_phone_number"
                            app:layout_constraintBottom_toTopOf="@+id/country_frame_layout"
                            app:layout_constraintStart_toStartOf="@+id/country_frame_layout"
                            app:layout_constraintTop_toTopOf="@+id/country_frame_layout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_add_logo"
                    style="@style/txt_styles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_add_logo"
                    android:textColor="#99000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_add_logo" />

                <TextView
                    android:id="@+id/tv_already_hav_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_already_have_an_account"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sign_in"
                    android:textColor="#FFA800"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:onClick="@{()-> viewModel.signInClicked()}"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_already_hav_account"
                    app:layout_constraintStart_toEndOf="@+id/tv_already_hav_account" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#FFA800"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="@{()-> viewModel.nextClicked()}"
                    android:text="@string/txt_next"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txt_sign_in"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>