<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mostafan3ma.android.menupro10.presentation.startingFragments.viewModels.OtpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/default_background"
        tools:context=".presentation.startingFragments.OtpFragment">


        <TextView
            android:id="@+id/tv_phon_number"
            style="@style/txt_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/txt_please_enter_the_code_you_received_at_964xxxxxxxxxx_for_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/verification_code"
            app:boxStrokeColor="#FFA800"
            app:endIconMode="clear_text"
            app:hintTextColor="#FFA800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phon_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_et"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@={viewModel.code}"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phon_number">

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:fontFamily="@font/poppins_medium"
                android:inputType="number"
                android:itemBackground="@color/white"
                android:textSize="24sp"
                app:OtpCursorColor="@color/default_yellow"
                app:OtpItemCount="6"
                app:OtpItemHeight="65dp"
                app:OtpItemRadius="10dp"
                app:OtpItemSpacing="20sp"
                app:OtpItemWidth="30dp"
                app:OtpLineColor="@color/black"
                app:OtpLineWidth="1dp"
                app:OtpViewType="rectangle" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="36dp"
            android:src="@drawable/img_otp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_field" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/txt_didn_t_t_get_the_code_resend"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/txt_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/resend"
            android:textSize="20sp"
            android:onClick="@{()-> viewModel.triggerResendEvent()}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>